things for graphs

--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -21,7 +21,7 @@
 	</div>
 </div>
 
-<div class="main-wrap block-group">
-	<div class="landing-bottom block">&nbsp;
-	</div>
+<div class="main-wrap block-group" ng-controller="FooterCtrl">
+	<div class="landing-bottom block">&nbsp;</div>
+	<!--<div d3-bars data="data" bar-height="20" bar-padding="5"></div>-->
 </div>
