--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -5,16 +5,16 @@
 			<div class="call-left block">&nbsp;</div>
 			<div class="call-right block">
 				<div class="box" ng-controller="CallToActionCtrl">
-					<h2>You invest</h2>
+					<h2>Every month you invest</h2>
 					<form>
-						<input class="invest-money" ng-model="monthlyInvestment" />per month for 5 years
+						<input class="invest-money" ng-model="monthlyInvestment" />for 5 years
 					</form>
-					<h3> and you could gain</h3>
-					<h1>{{calcResults}}€</h1>
-					<h3>with InvestUs</h3>
+					<h3> and gain</h3>
+					<h1>{{investUsCalcResults}}€</h1>
 					<form>
 						<button class="start-now" ng-click="startNow()">Start now</button>
 					</form>
+					You could save an average of {{calcResults}}€ vs your bank. <a href="/">+How?</a>
 				</div>
 			</div>
 		</div>
