--- a/web-app/views/signup.html
+++ b/web-app/views/signup.html
@@ -9,17 +9,20 @@
 		        <fieldset>
 		          <legend><span class="number">1</span>Your basic info</legend>
 		          <label for="name">Name:</label>
-		          <input type="text" id="name" name="user_name">
+		          <input ng-model='name' type="text" id="name" name="user_name">
 		          
 		          <label for="mail">Email:</label>
-		          <input type="email" id="mail" name="user_email">
+		          <input ng-model='name' type="email" id="mail" name="user_email">
 		          
 		          <label for="password">Password:</label>
-		          <input type="password" id="password" name="user_password">
+		          <input ng-model='name' type="password" id="password" name="user_password">
+
+							<label for="password_confirmation">Password confirmation:</label>
+							<input ng-model='name' type="password_confirmation" id="password" name="user_password_confirmation">
 		          
 		          <label>Age:</label>
-		          <input type="radio" id="under_18" value="under_18" name="user_age"><label for="under_18" class="light">Under 18</label><br>
-		          <input type="radio" id="over_18" value="over_18" name="user_age"><label for="over_18" class="light">18 or older</label>
+							<input ng-model='name' type="radio" id="over_18" value="over_18" name="user_age"><label for="over_18" class="light">18 or older</label><br>
+		          <input ng-model='name' type="radio" id="under_18" value="under_18" name="user_age"><label for="under_18" class="light">Under 18</label><br>
 		        </fieldset>
 		        
 		        </fieldset>
