--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -156,51 +156,58 @@ a:hover, a:active {
 			h1 {
 				text-align: center;
 			}
-
-			form {
-				width: 100%;
-				margin: 0 auto;
-				padding: 0 20px;
-				color: $dark-blue;
-
-
-				input, button{
-					text-align: center;
-					padding: 10px 15px;
-					box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-					font-family: $font-lato;
-					font-weight: 300;
-					font-size: 1.5em;
-					height: auto;
-					margin: 0 !important;
-					outline: 0;
-					border: none;
-					width: 100%;
-					-webkit-border-radius: 10px;
-					-moz-border-radius: 10px;
-					border-radius: 10px;
-				}
-				
-				input.invest-money {
-					color: $dark-blue;
-					background-color: $white;
-				}
-
-				button.start-now {
-				    color: $white;
-				    background-color: $logo-blue;
-				    cursor: pointer;
-					border: 1px solid $dark-blue;
-					border-width: 1px 1px 3px;
-					box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
-				}
-			}
 		}
 		.footnote {
 			color: white;
 			font-size: 75%;
 		}
 	}
+}
+
+form.ss {
+	width: 100%;
+	margin: 0 auto;
+	padding: 0 20px;
+	color: $dark-blue;
+	
+	input, button{
+		text-align: center;
+		padding: 10px 15px;
+		box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+		font-family: $font-lato;
+		font-weight: 300;
+		font-size: 1.5em;
+		height: auto;
+		margin: 0 !important;
+		outline: 0;
+		border: none;
+		width: 100%;
+		-webkit-border-radius: 10px;
+		-moz-border-radius: 10px;
+		border-radius: 10px;
+	}
+	
+	input.invest-money {
+		color: $dark-blue;
+		background-color: $white;
+	}
+
+	button.start-now {
+	    color: $white;
+	    background-color: $logo-blue;
+	    cursor: pointer;
+		border: 1px solid $dark-blue;
+		border-width: 1px 1px 3px;
+		box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+	}
+}
+
+
+.reasons {
+	background: url(../images/reasons.png);
+	background-position: center;
+	width: 100%;
+	height: 269px;
 }
 
 .landing-bottom {
