--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -16,7 +16,7 @@
 					<form class="ss">
 						<button class="start-now" ng-click="startNow()">Start now</button>
 					</form>
-					You could save an average of {{calcResults}}€ vs your bank. <a href="/">+How?</a>
+					You could save an average of {{calcResults}}€ vs your bank. <a href="#/about" style="color:white;">+How?</a>
 				</div>
 			</div>
 		</div>
@@ -37,3 +37,12 @@
 		</form>
 	</div>
 </div>
+
+
+<div class="main-wrap block-group">
+	<div class=" block" style="text-align: center; margin-top: 2em;">
+		<div class="fb-like" data-href="https://www.facebook.com/InvestUsEasy" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+	</div>
+</div>
+
+
