--- a/web-app/views/about.html
+++ b/web-app/views/about.html
@@ -1,21 +1,36 @@
 <div class="main-wrap block-group">
     <div class="main-menu block">
-		<ul>
-			<a href="#/about" class=""><li>About</li></a>
-			<a href="#/investment" class="current"><li>Investments</li></a>
-		</ul>
+        <ul>
+            <a href="#/about" class="">
+                <li>About</li>
+            </a>
+            <a href="#/investment" class="current">
+                <li>Investments</li>
+            </a>
+        </ul>
     </div>
     <div class="main-about block-group">
-    	<div class="block">
-    		<h1>About InvestUs</h1>
-    		<h3>Simple</h3>
-    		<p>We provide easy environment for long-term investing. We will take away the million choices investing sites usually give with loads of complicated information. Instead we will present only 1 stock - Vanguard Total Stock Market ETF. <br />
-Our platform is easiest for a beginner investor, but also low risk investment for advanced investors. </p>
-    		<h3>Safe investment platform</h3>
-    		<p>ETF is one of the biggest and most reliable stocks in the whole world and perfect for long-term investing. We will create our own VTI fund and enable the user to invest in smaller amounts then the usual 4-digit barrier entry. Long-term investments are more stable and with higher probability to increase your money. It is like an incurance for your future.</p>
-    		<h3>Low fees</h3>
-    		<p>Investing with our platform is much cheaper than in banks. With our system you will save on transfer as well as currency exchange fees and we are also not charging monthly fees for account holding. Banks are usually limiting minimum investment amount atleast 2000 eur. 
-Our goal is to provide cheaper investment platform without monthly fees and allow people to start investing smaller amounts. You choose your amount and time of investment.</p>
-    	</div>
+        <div class="block">
+            <h1>About InvestUs</h1>
+
+            <h3>Simple</h3>
+
+            <p>We provide easy environment for long-term investing. We will take away the million choices investing sites usually give with loads of complicated
+                information. Instead we will present only 1 stock - Vanguard Total Stock Market ETF. <br/>
+                Our platform is easiest for a beginner investor, but also low risk investment for advanced investors. </p>
+
+            <h3>Safe investment platform</h3>
+
+            <p>ETF is one of the biggest and most reliable stocks in the whole world and perfect for long-term investing. We will create our own VTI fund and
+                enable the user to invest in smaller amounts then the usual 4-digit barrier entry. Long-term investments are more stable and with higher
+                probability to increase your money. It is like an incurance for your future.</p>
+
+            <h3>Low fees</h3>
+
+            <p>Investing with our platform is much cheaper than in banks. With our system you will save on transfer as well as currency exchange fees and we are
+                also not charging monthly fees for account holding. Banks are usually limiting minimum investment amount atleast 2000 eur.
+                Our goal is to provide cheaper investment platform without monthly fees and allow people to start investing smaller amounts. You choose your
+                amount and time of investment.</p>
+        </div>
     </div>
 </div>
