Added user registration and sorry page

--- a/web-app/css/base.css
+++ b/web-app/css/base.css
@@ -580,3 +580,9 @@ form.ss {
   .main-wrap {
     max-width: 1280px;
     margin: 0 auto; } }
+
+.error-msg {
+  text-align: center;
+  color: #D8000C;
+  margin: 10px;
+}
