--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -17,7 +17,7 @@
                     <form class="ss">
                         <button class="start-now" ng-click="startNow()">Start now</button>
                     </form>
-                    You could save an average of {{calcResults}}€ vs your bank. <a href="#/about" style="color:white;">+How?</a>
+                    You could save an average of {{calcResults}}€ vs your bank. <a ui-sref="about" style="color:white;">+How?</a>
                 </div>
             </div>
         </div>
