--- a/web-app/views/investment.html
+++ b/web-app/views/investment.html
@@ -1,10 +1,10 @@
 <div class="main-wrap block-group">
     <div class="main-menu block">
         <ul>
-            <a href="#/about" class="">
+            <a ui-sref="about" class="">
                 <li>About</li>
             </a>
-            <a href="#/investment" class="current">
+            <a ui-sref="investment" class="current">
                 <li>Investments</li>
             </a>
         </ul>
