Added data collecting for users.

--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="main-wrap block-group">
-    <div class=" block" style="text-align: center; margin-top: 1em;" ng-controller="CallToActionCtrl">
+    <div class=" block" style="text-align: center; margin-top: 1em;" ng-controller="FooterCtrl">
         <form class="ss">
             <button class="start-now" style="width: 180px;" ng-click="startNow()">Invest now</button>
         </form>
